--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ requests>=2.31.0
 beautifulsoup4>=4.12.0
 python-docx>=0.8.11
 pydantic>=2.0.0
+azure-identity>=1.15.0
+azure-storage-file-datalake>=12.19.0
